WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244427
REGRESSION (STP): Some properties fail to inherit via a query container on mutation
https://bugs.webkit.org/show_bug.cgi?id=244427
Summary
REGRESSION (STP): Some properties fail to inherit via a query container on mu...
mic.gallego
Reported
2022-08-27 04:00:08 PDT
Hi, While testing Safari TP, I found that some of our code completely broke (at least since TP152). I created a minimal test case here:
https://codesandbox.io/s/serene-aj-gll158?file=/src/index.js:164-165
After clicking the button, the "Should show" test should be in red. On Chrome with container query enabled this works correctly, on Safari the content is completely hidden after the animation. Thanks!
Attachments
reduction
(236 bytes, text/html)
2022-08-29 06:03 PDT
,
Antti Koivisto
no flags
Details
Patch
(14.59 KB, patch)
2022-09-01 03:13 PDT
,
Antti Koivisto
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(14.84 KB, patch)
2022-09-01 03:43 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(14.83 KB, patch)
2022-09-01 04:26 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2022-08-27 18:46:04 PDT
> After clicking the button, the "Should show" test should be in red.
I don't get any red in shipping Safari, Chrome or Firefox, and they all behave identically. Are you saying that they are all wrong? I do get a different behavior in STP 152 - it shows red at first, but after clicking the button, part of the text indeed doesn't show up.
Radar WebKit Bug Importer
Comment 2
2022-08-27 18:46:15 PDT
<
rdar://problem/99237306
>
mic.gallego
Comment 3
2022-08-28 21:00:42 PDT
(In reply to Alexey Proskuryakov from
comment #1
)
> > After clicking the button, the "Should show" test should be in red. > > I don't get any red in shipping Safari, Chrome or Firefox, and they all > behave identically. Are you saying that they are all wrong? > > I do get a different behavior in STP 152 - it shows red at first, but after > clicking the button, part of the text indeed doesn't show up.
Yes, this is exactly the issue. On Safari 152, when you click on the button the red text should appear, it does not. Under Safari 152, everything being in a container media query is completely ignored by WAAPI, as if the styles were never invalidated.
Antti Koivisto
Comment 4
2022-08-29 06:03:54 PDT
Created
attachment 461975
[details]
reduction Looks like there is some bug specific to 'visibility' where it fails to inherit correctly from a query container.
Antti Koivisto
Comment 5
2022-09-01 03:13:40 PDT
Created
attachment 462070
[details]
Patch
EWS Watchlist
Comment 6
2022-09-01 03:15:56 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Antti Koivisto
Comment 7
2022-09-01 03:43:08 PDT
Created
attachment 462071
[details]
Patch
Antti Koivisto
Comment 8
2022-09-01 04:26:18 PDT
Created
attachment 462072
[details]
Patch
EWS
Comment 9
2022-09-01 08:51:26 PDT
Committed
254042@main
(9ba6488c8c4b): <
https://commits.webkit.org/254042@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462072
[details]
.
Antti Koivisto
Comment 10
2023-06-27 06:41:38 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/40769
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug