Cherry-pick 9ba6488c8c4b. rdar://problem/99237306

REGRESSION (STP): Some properties fail to inherit via a query container on mutation
    https://bugs.webkit.org/show_bug.cgi?id=244427
    <rdar://99237306>

    Reviewed by Alan Bujtas.

    If an inherited property changes on a query container (an element with container-type property) in some
    cases we fail to inherit it through to parents. This is because we incorrectly optimize away the style change.

    This patch changes query container handling during style resolution so that we do an explicit state restoration
    when resuming after layout.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/inheritance-from-container-expected.txt: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/inheritance-from-container.html: Added.
    * Source/WebCore/dom/Element.cpp:
    (WebCore::Element::invalidateForResumingQueryContainerResolution):

    Helper to mark ancestor chain for child style resolution without invalidating any style.
    This allows style resolution to resume from where it left without doing unnecessary extra work.

    * Source/WebCore/dom/Element.h:
    * Source/WebCore/dom/Node.cpp:
    (WebCore::Node::updateAncestorsForStyleRecalc):
    (WebCore::Node::markAncestorsForInvalidatedStyle):
    * Source/WebCore/dom/Node.h:
    * Source/WebCore/style/StyleTreeResolver.cpp:
    (WebCore::Style::TreeResolver::popParent):

    Set the style invalidity bits again when exiting TreeResolver::resolve instead of avoiding
    clearing here.

    (WebCore::Style::TreeResolver::resolveComposedTree):
    (WebCore::Style::TreeResolver::updateStateForQueryContainer):

    Save and restore the state.
    Only use a single map and bit for the state.

    (WebCore::Style::TreeResolver::resolve):

    No need to move the containers as they are kept in a single map.
    Invalidate the ancestor chain so we find the containers when resuming after layout.

    (WebCore::Style::TreeResolver::determineQueryContainerAction): Deleted.
    * Source/WebCore/style/StyleTreeResolver.h:
    (WebCore::Style::TreeResolver::hasUnresolvedQueryContainers const):

    Canonical link: https://commits.webkit.org/254042@main

Canonical link: https://commits.webkit.org/252432.312@safari-7614-branch