Source/WebCore/dom/Node.h
@@ -705,6 +705,7 @@ protected:
 
     void invalidateStyle(Style::Validity, Style::InvalidationMode = Style::InvalidationMode::Normal);
     void updateAncestorsForStyleRecalc();
+    void markAncestorsForInvalidatedStyle();
 
     ExceptionOr<RefPtr<Node>> convertNodesOrStringsIntoNode(FixedVector<NodeOrString>&&);
 
